# Hive

./: PROJECT_ARCHITECTURE.md  c0_log.jsonl
.github/: copilot-instructions.md
axiom-desktop/: package-lock.json  package.json
axiom-desktop/src/: App.css  App.tsx
axiom-desktop/src-tauri/: Cargo.toml  tauri.conf.json
axiom-desktop/src-tauri/capabilities/: main.json
axiom-desktop/src-tauri/src/: audit_log.rs  inference.rs  lib.rs  vector_store.rs
axiom_hive/: LICENSE  README.md
axiom_hive/api/: __init__.py
axiom_hive/config/: axiom_hive.yaml
axiom_hive/core/: __init__.py  agent_orchestration.py  crown_sigma_logic.py  dhmsa_benchmark.py  hive_core.py  identity_barrier.py
axiom_hive/core/inference/: __init__.py  engine.py
axiom_hive/core/verify/: __init__.py  axiom_hive_core.cfg  axiom_hive_core.tla  verifier.py
axiom_hive/crypto/: __init__.py  c0_signatures.py  fhe_local.py
axiom_hive/docs/: Architecture_of_Inevitability.md  Deterministic_Architecture_Summary.md  LEGAL_LIABILITY.md  LICENSE  README.md  Sovereign_Vessel_Specification.md  architectural_determinism_whitepaper.json  manifesto_phase_3.md  sovereign_vessel_mk2_spec.md
axiom_hive/monetization/: __init__.py  l402_gate.py
axiom_hive/orchestrator/: __init__.py  omega_swarm.py
axiom_hive/proofs/: c0_logic.md  inverted_lagrangian_proof.tex
axiom_hive/scripts/: launch.bat  run_local.sh  run_tests.sh
