[package]
name = "axiom-desktop"
version = "0.1.0"
description = "A Tauri App for Axiom Hive - Deterministic, Local-Only Desktop Interface"
authors = ["Alexis M. Adams"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
homepage = "https://github.com/alexisadams/axiom-hive"
repository = "https://github.com/alexisadams/axiom-hive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "axiom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rs_merkle = "1.4.2"
sqlite-vec = "0.1.3"
llama-cpp-2 = { version = "0.1.91", features = ["cuda"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = "0.32.1"
bytemuck = "1.16.3"
lazy_static = "1.5.0"

[dev-dependencies]
# No dev dependencies required for this minimal setup

[features]
# Define features for conditional compilation
default = ["custom-protocol"]
custom-protocol = []
